Integrate regex search - 1